fix: added line break in housing description collapses

--- a/src/base/global.scss
+++ b/src/base/global.scss
@@ -10,4 +10,12 @@ body {
 
 li {
     list-style-type: none;
+    font-weight: normal;
+}
+
+h3 {
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+    font-size: 1em;
 }
